# dish_service

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 61e51d79373d_init_db.py  b84833011207_init_db.py
postgresql/: Dockerfile
srv/: main.py
srv/api/base/: schemas.py  views.py
srv/api/v1/: routes.py
srv/api/v1/dishes/: routes.py  views.py
srv/api/v1/healthy/: routes.py  views.py
srv/api/v1/products/: routes.py  views.py
srv/api/v1/products_in_dishes/: routes.py  views.py
srv/schemas/: base.py
srv/services/: dishes.py  products.py  products_in_dishes.py
srv/settings/: configs.py
srv/store/abc/: db_accessor.py
srv/store/postgres/: accessor.py  tables.py
srv/store/postgres/database/: base.py  dishes.py  products.py  products_in_dishes.py
srv/web/: app.py  context.py  middleware.py  routes.py
tests/: accesor.py  app.py  conftest.py  database.py  get_data.py
tests/api/v1/: conftest.py
tests/api/v1/dishes/: test_dishes.py
tests/api/v1/healthy/: test_healthy.py
tests/api/v1/products/: test_products.py
tests/api/v1/products_in_dishes/: test_products_in_dishes.py
